apps/services/rss/hub/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rss-hub
  labels:
    app: rss-hub
spec:
  selector:
    app: rss-hub
  ports:
    - name: web
      port: 3001
      targetPort: 1200
      protocol: TCP
  loadBalancerClass: tailscale
  type: LoadBalancer
